--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "^2.16.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-text-input-mask": "^2.0.1",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.0.0",
+    "react-select": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
